log
Fri Mar 11 17:42:30 HSP 2022: 
 exercises.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:81:12: error: unused variable 'ptrVector' [-Werror=unused-variable]
    Vector *ptrVector;
            ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
941689c
Fri Mar 11 17:43:51 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
e2795dc
Fri Mar 11 17:49:13 HSP 2022: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:83:21: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    ptrVector->datos = n;
                     ^
exercises.c:85:25: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
    ptrVector->capacidad = (int *) calloc(n, sizeof(int));
                         ^
cc1.exe: all warnings being treated as errors
Compilation failed
6b24f54
Fri Mar 11 17:49:50 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
81ae0a7
Fri Mar 11 20:31:30 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
af8c735
Fri Mar 11 20:33:00 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 40/70
a0965c3
Fri Mar 11 20:36:52 HSP 2022: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
72dbbd9
Fri Mar 11 21:06:02 HSP 2022: 
 exercises.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaV2':
exercises.c:134:12: error: unused variable 'vectorSuma' [-Werror=unused-variable]
    Vector* vectorSuma = crearVector(2);
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
280dd4a
Fri Mar 11 21:06:16 HSP 2022: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|2
total_score: 50/70
44c68ec
Fri Mar 11 21:06:53 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
e389056
Fri Mar 11 21:26:29 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:40:18: error: passing argument 1 of 'sumaN' makes pointer from integer without a cast [-Werror=int-conversion]
    *suma = sumaN(*(a+(n-m)), m);
                  ^
exercises.c:21:5: note: expected 'int *' but argument is of type 'int'
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
978303f
Fri Mar 11 21:43:50 HSP 2022: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
52f0a8b
Fri Mar 11 21:50:08 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
83f144a
Fri Mar 11 21:51:13 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
5478659
Fri Mar 11 21:52:57 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
eb7e7b2
Fri Mar 11 22:22:21 HSP 2022: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  8|0
total_score: 70/70
2227194
